# ansible-waldur-generator

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
ansible_waldur_generator/: .gitlab-ci.yml  api_parser.py  builder.py  cli.py  generator.py  helpers.py  models.py  parser.py  plugin_manager.py  schema_parser.py
ansible_waldur_generator/docs/: COMPOSITE_KEYS.md
ansible_waldur_generator/interfaces/: builder.py  command.py  config.py  parser.py  plugin.py  resolver.py  runner.py  test_resolver.py
ansible_waldur_generator/plugins/actions/: config.py  plugin.py  runner.py
ansible_waldur_generator/plugins/crud/: builder.py  config.py  context.py  parser.py  plugin.py  runner.py  test_crud_runner.py
ansible_waldur_generator/plugins/facts/: builder.py  config.py  context.py  parser.py  plugin.py  runner.py  test_facts_runner.py
ansible_waldur_generator/plugins/link/: config.py  plugin.py  runner.py
ansible_waldur_generator/plugins/order/: builder.py  config.py  parser.py  plugin.py  runner.py  test_order_runner.py
ansible_waldur_generator/templates/: crud_module.py.j2  generic_module.py.j2  resource_module.py.j2
ansible_waldur_generator/tests/: test_facts_runner.py  test_order_runner.py
ansible_waldur_generator/tests/e2e/: conftest.py  test_instance.py  test_network_rbac_policy.py  test_order.py  test_port.py  test_security_group.py  test_subnet.py  test_volume.py  test_volume_attachment.py  test_vpc_action.py  test_vpc_cross_offering.py
ansible_waldur_generator/tests/e2e/cassettes/: TestInstanceModule.test_create_instance_with_existing_ports.yaml  TestInstanceModule.test_create_instance_with_fixed_ports.yaml  TestInstanceModule.test_instance_port_fixed_ips_update_is_successful.yaml  TestInstanceModule.test_instance_port_update_is_idempotent.yaml  TestInstanceModule.test_instance_port_update_is_performed.yaml  TestInstanceModule.test_terminate.yaml  TestInstanceModule.test_update_security_groups_performed.yaml  TestInstanceModule.test_update_security_groups_skipped.yaml  TestInstanceModule.test_update_security_groups_skipped_reorder.yaml  TestNetworkRbacPolicyModule.test_create_policy.yaml  TestNetworkRbacPolicyModule.test_create_policy_idempotent.yaml  (+29 more)
ansible_waldur_generator/tests/unit/: test_api_parser.py  test_cli.py  test_crud_plugin_no_create.py  test_crud_plugin_update_examples.py  test_crud_runner.py  test_facts_runner.py  test_generator.py  test_models.py  test_oneof_expansion.py  test_openstack_network_ux_modules.py  test_order_plugin_allof.py  test_order_runner.py  test_order_runner_existence.py  test_plugin_manager.py  test_resolver.py  test_resolver_url.py  test_resolver_validation.py  test_runner_composite_keys.py  test_runner_uuid_support.py  test_send_request_errors.py
docs/: modules.md  plugins.md  tests.md
inputs/: generator_config.yaml  waldur_api.yaml
scripts/: generate_ansible_changelog.py
tests/e2e/: conftest.py  test_instance.py  test_volume.py
tests/e2e/cassettes/: TestInstanceModule.test_terminate.yaml  TestInstanceModule.test_update_security_groups.yaml  TestInstanceModule.test_update_security_groups_performed.yaml
tests/unit/: conftest.py  test_api_parser.py  test_cli.py  test_crud_runner.py  test_facts_runner.py  test_generator.py  test_models.py  test_order_runner.py  test_plugin_manager.py  test_resolver.py  test_schema_parser.py
